--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="form-group">
                   <label for="frequency-input">Frequency (min)</label>
-                  <input class="form-control" id="frequency-input" type="text">
+                  <input class="form-control" id="frequency-input" type="number">
                 </div>
                 <button class="btn btn-primary" id="add-train-btn" type="submit">Submit</button>
               </form>
@@ -87,8 +87,8 @@
 
 
 
-
-
+<script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.3.0/firebase.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="assets/javascript/app.js"></script>
 </body>
